-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.12.4
-
None
-
Archlinux - kernel 5.7.6
Desktop environement: i3 + Custom tweak
-
-
b19c5969d8a94d57dc9dfc2906e548dac24d0adc (qt-creator/qt-creator/4.13)
How to reproduce:
- Create new empty Qt Quick project
- Go to main.cpp and add a named namespace "namespace foo {}"
- Add the Q_NAMESPACE macro in the namespace
- Go into main() function
- Start typing qmlRegisterUncreatableMetaType...
- Your cursor is now here: qmlRegisterUncreatableMetaObject(foo::staticMetaObject, "com.example.foo", 1, <HERE>)
- Type '0' and wait
- QtCreator crash with SIGSEGV
I added a minimal sample project as attachment, the coredump info and console output.
Qt libraries do not include debugging info, sorry. If really needed, I can find some time to rebuild it in Debug mode and send the coredump.
Since the problem only appear with this specific function and the console output suggest problem with the clang background process, I bet on something wrong between Qt header file and the clang background process. I don't known the right way to debug this background process but no coredump was found about it. Anyways, QtCreator should not crash.
| For Gerrit Dashboard: QTCREATORBUG-24477 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 310211,2 | QmlJS: Fix crash | 4.13 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |