QmlJS: Fix crash

Fixes: QTCREATORBUG-24477
Change-Id: I45ab28fd11d8c9e51fb3b537a677620ecee5985b
Reviewed-by: Fawzi Mohamed <fawzi.mohamed@qt.io>